Fixed usage of primitive wrappers in some method bodies.
git-svn-id: https://svn.osgeo.org/geotools/geotools/trunk@25070 e5c1c795-43da-0310-a71f-fac65c449510